# openjobs-api

./: .env.example  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
api/: admin.py  managers.py  models.py  paginations.py  serializers.py  urls.py  viewsets.py
api/management/commands/: seed_api_data.py
api/migrations/: 0001_initial.py  0002_auto_20210315_0314.py  0003_auto_20210323_2347.py  0004_auto_20210405_2241.py
openjobs/: asgi.py  settings.py  urls.py  wsgi.py
