[tool.poetry]
name = "openjobs_api"
version = "0.1.0"
description = "API for OpenJobs system"
authors = ["OpenJobs Team <openjobs.cinfo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"Django-2.2.19" = "^2.2.19-alpha.20210217101109"
drf-yasg2 = "^1.19.4"
djangorestframework-simplejwt = "^4.6.0"
djoser = "^2.1.0"
django-environ = "^0.4.5"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
