[tool.poetry]
name = "openjobs_api"
version = "0.1.0"
description = "API for OpenJobs system"
authors = ["OpenJobs Team <openjobs.cinfo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.1.7"
djangorestframework-simplejwt = "^4.6.0"
djoser = "^2.1.0"
django-environ = "^0.4.5"
django-heroku = "^0.3.1"
django-seed = "^0.2.2"
django-filter = "^2.4.0"
drf-yasg = "^1.20.0"
mysqlclient = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
